--- a/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
@@ -156,6 +156,11 @@ spec:
               configMapKeyRef:
                 name: watcher-config
                 key: eth-start-block-number
+          - name: "watcher.notify.channel.id"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: notify-channel-id
       volumes:
       - name: host-time
         hostPath:
