--- a/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
@@ -97,9 +97,9 @@ spec:
                 name: network-config
                 key: bnb.rpc.api
           - name: "watcher.chain.scanStep"
-            value: 1
+            value: '1'
           - name: "watcher.chain.chainId"
-            value: 97
+            value: '97'
           - name: "watcher.chain.chainType"
             value: EVM_PoW
           - name: "watcher.notify.template"
