--- a/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-goerli/deployment.yaml
@@ -100,17 +100,17 @@ spec:
           - name: "watcher.notify.template"
             value: "Goerli"
           - name: "watcher.scan.switch"
-            value: false
+            value: "false"
           - name: "watcher.chain.monitor"
-            value: true
+            value: "true"
           - name: "watcher.process.concurrent.switch"
-            value: false
+            value: "false"
           - name: "watcher.insert.transaction.log"
-            value: false
+            value: "false"
           - name: "watcher.select.transaction.log"
-            value: true
+            value: "true"
           - name: "watcher.process.only.evmplugin"
-            value: false
+            value: "false"
           - name: "watcher.transaction.bridge.group"
             value: "eth-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
