--- a/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-bnb/deployment.yaml
@@ -105,15 +105,15 @@ spec:
           - name: "watcher.notify.template"
             value: "BNB"
           - name: "watcher.scan.switch"
-            value: false
+            value: "false"
           - name: "watcher.process.concurrent.switch"
-            value: false
+            value: "false"
           - name: "watcher.insert.transaction.log"
-            value: false
+            value: "false"
           - name: "watcher.select.transaction.log"
-            value: false
+            value: "false"
           - name: "watcher.process.only.evmplugin"
-            value: false
+            value: "false"
           - name: "watcher.transaction.bridge.group"
             value: "bnb-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
