--- a/watcher/watcher-bootstrap/deploy/production/node-bnb/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-bnb/deployment.yaml
@@ -117,23 +117,23 @@ spec:
                 name: network-config
                 key: bnb.rpc.api
           - name: "watcher.chain.scanStep"
-            value: 1
+            value: '1'
           - name: "watcher.chain.chainId"
-            value: 97
+            value: '97'
           - name: "watcher.insert.transaction.log"
-            value: false
+            value: 'false'
           - name: "watcher.select.transaction.log"
-            value: false
+            value: 'false'
           - name: "watcher.chain.chainType"
-            value: EVM_PoW
+            value: 'EVM_PoW'
           - name: "watcher.notify.template"
-            value: BNB
+            value: 'BNB'
           - name: "watcher.scan.switch"
-            value: false
+            value: 'false'
           - name: "watcher.process.concurrent.switch"
-            value: false
+            value: 'false'
           - name: "watcher.process.only.evmplugin"
-            value: false
+            value: 'false'
           - name: "watcher.transaction.bridge.group"
             value: "bnb-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
