--- a/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: $APP_NAME-goerli-production
+  name: $APP_NAME-polygon-production
   namespace: paas
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: $APP_NAME-goerli-production
+      app: $APP_NAME-polygon-production
   template:
     metadata:
       labels:
-        app: $APP_NAME-goerli-production
+        app: $APP_NAME-polygon-production
     spec:
       containers:
-      - name: $APP_NAME-goerli-production
+      - name: $APP_NAME-polygon-production
         image:  $REGISTRY/$APP_NAME:SNAPSHOT-$BUILD_NUMBER
         livenessProbe:
           httpGet:
@@ -46,6 +46,11 @@ spec:
             value: "prd"
           - name: TZ
             value: UTC
+          - name: "evm.chain.rinkebyUrl"
+            valueFrom:
+              configMapKeyRef:
+                name: network-config
+                key: polygon.rpc.api
           - name: "nacos.config.server-addr"
             valueFrom:
               configMapKeyRef:
@@ -54,17 +59,17 @@ spec:
           - name: "spring.datasource.chainscan.jdbc-url"
             valueFrom:
               secretKeyRef:
-                name: database-goerli
+                name: database-polygon
                 key: url
           - name: "spring.datasource.chainscan.username"
             valueFrom:
               secretKeyRef:
-                name: database-goerli
+                name: database-polygon
                 key: username
           - name: "spring.datasource.chainscan.password"
             valueFrom:
               secretKeyRef:
-                name: database-goerli
+                name: database-polygon
                 key: password
           - name: "spring.datasource.wallet.jdbc-url"
             valueFrom:
@@ -95,7 +100,7 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: network-config
-                key: ether.rpc.api
+                key: polygon.rpc.api
           - name: "coin.dtx.api"
             valueFrom:
               configMapKeyRef:
@@ -110,11 +115,11 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: network-config
-                key: eth.rpc.api
+                key: polygon.rpc.api
           - name: "watcher.chain.scanStep"
             value: '1'
           - name: "watcher.chain.chainId"
-            value: '5'
+            value: '80001'
           - name: "watcher.insert.transaction.log"
             value: 'false'
           - name: "watcher.select.transaction.log"
@@ -122,7 +127,7 @@ spec:
           - name: "watcher.chain.chainType"
             value: 'EVM_PoW'
           - name: "watcher.notify.template"
-            value: 'Goerli'
+            value: 'polygon'
           - name: "watcher.scan.switch"
             value: 'false'
           - name: "watcher.process.concurrent.switch"
@@ -130,34 +135,34 @@ spec:
           - name: "watcher.process.only.evmplugin"
             value: 'false'
           - name: "watcher.transaction.bridge.group"
-            value: "eth-watcher-transaction-bridge-group"
+            value: "polygon-watcher-transaction-bridge-group"
           - name: "bridge.proposal"
-            value: "eth-bridge-proposal"
+            value: "polygon-bridge-proposal"
           - name: "watcher.bridge.contract.address"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-bridge-contract-address
+                key: polygon-bridge-contract-address
           - name: "watcher.contract.lending.lending-config"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-lending-contract-config
+                key: polygon-lending-contract-config
           - name: "watcher.contract.l2"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-l2-contract-config
+                key: polygon-l2-contract-config
           - name: "watcher.confirm.block"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-watcher-confirm-block
+                key: polygon-watcher-confirm-block
           - name: "watcher.contract.lending.stable-config"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-stable-contract-config
+                key: polygon-stable-contract-config
           - name: "watcher.monitor.cron"
             value: "0 */1 * * * ?"
           - name: "watcher.monitor.threshold"
@@ -166,12 +171,12 @@ spec:
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-start-block-number
+                key: polygon-start-block-number
           - name: "watcher.l2.rest.api"
             valueFrom:
               configMapKeyRef:
                 name: watcher-config
-                key: eth-l2-rpc-url
+                key: polygon-l2-rpc-url
           - name: "watcher.notify.channel.id"
             valueFrom:
               configMapKeyRef:
@@ -194,5 +199,6 @@ spec:
                     operator: In
                     values:
                       - $APP_NAME-dtx-production
-                      - $APP_NAME-goerli-production
+                      - $APP_NAME-rinkeby-production
+                      - $APP_NAME-polygon-production
               topologyKey: "kubernetes.io/hostname"
