创建nft erc1155 watcher兼容。

--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://rinkeby-mysql8.database.svc.cluster.local:3306/chainscan_rinkeby_test?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://10.233.59.153:3306/chainscan2?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 evm.chain.scanStep=1
 evm.chain.processStep=1
-evm.chain.chainId=186
+evm.chain.chainId=80001
 evm.chain.chainType=EVM_PoS
-evm.chain.chainRpcUrl=https://bsc.getblock.io/testnet/?api_key=cffe89af-585f-44d8-a5d8-fe2e4ca3f9d2
+#evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1
+evm.chain.chainRpcUrl=https://rpc-mumbai.matic.today/
+#evm.chain.chainRpcUrl=https://bsc.getblock.io/testnet/?api_key=cffe89af-585f-44d8-a5d8-fe2e4ca3f9d2
 #evm.chain.chainRpcUrl=http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
-
-
 
 # non-environment
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -19,7 +19,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 #
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
 
 evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
@@ -32,8 +33,9 @@ spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.idle-timeout=600000
 
-start.block.number=1000000
+#start.block.number=1314550
+start.block.number=31555229
 
+watcher.transaction.bridge.group=dtx-watcher-transaction-bridge-group
 
-
-
+watcher.nft.auction.address=0x265B27e08344CD5B7a8BA197cDEcf43FEd5cdE74
