--- a/watcher/watcher-core/pom.xml
+++ b/watcher/watcher-core/pom.xml
@@ -208,5 +208,11 @@
             <artifactId>quartz</artifactId>
             <version>2.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.3</version>
+        </dependency>
     </dependencies>
 </project>
