--- a/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
@@ -109,9 +109,9 @@ spec:
           - name: "watcher.process.concurrent.switch"
             value: "false"
           - name: "watcher.insert.transaction.log"
-            value: "false"
+            value: "true"
           - name: "watcher.select.transaction.log"
-            value: "false"
+            value: "true"
           - name: "watcher.process.only.evmplugin"
             value: "false"
           - name: "watcher.transaction.bridge.group"
