--- a/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
@@ -109,7 +109,7 @@ spec:
           - name: "watcher.process.concurrent.switch"
             value: "false"
           - name: "watcher.insert.transaction.log"
-            value: "true"
+            value: "false"
           - name: "watcher.select.transaction.log"
             value: "true"
           - name: "watcher.process.only.evmplugin"
