1. 优化创建nft 2. 创建nft拍卖兼容erc1155 3. 取消拍卖兼容erc1155

--- a/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
@@ -116,6 +116,8 @@ spec:
               configMapKeyRef:
                 name: network-config
                 key: polygon.rpc.api
+          - name: "watcher.token.not.scan.erc20"
+            value: 'true'
           - name: "watcher.chain.scanStep"
             value: '1'
           - name: "watcher.chain.chainId"
