watcher-创建nft、拍卖创建、出价、撤销优化效率，本地测试完成    a. 指定合约进行业务处理    b. 加入调用web3 api接口重试机制（10次，每次50ms）

--- a/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
@@ -96,7 +96,19 @@ spec:
               configMapKeyRef:
                 name: network-config
                 key: polygon.rpc.api
+          - name: "watcher.nft.auction.address"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: polygon-nft-auction-address
+          - name: "watcher.transfer.contract.address"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: polygon-watcher.transfer.contract.address
           - name: "watcher.token.not.scan.erc20"
+            value: 'true'
+          - name: "watcher.monitor.select.transaction.log"
             value: 'true'
           - name: "watcher.chain.scanStep"
             value: '1'
@@ -113,7 +125,7 @@ spec:
           - name: "watcher.insert.transaction.log"
             value: "false"
           - name: "watcher.select.transaction.log"
-            value: "true"
+            value: "false"
           - name: "watcher.process.only.evmplugin"
             value: "false"
           - name: "watcher.transaction.bridge.group"
