--- a/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node-polygon/deployment.yaml
@@ -116,7 +116,19 @@ spec:
               configMapKeyRef:
                 name: network-config
                 key: polygon.rpc.api
+          - name: "watcher.nft.auction.address"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: polygon-nft-auction-address
+          - name: "watcher.transfer.contract.address"
+            valueFrom:
+              configMapKeyRef:
+                name: watcher-config
+                key: polygon-nft.transfer.address
           - name: "watcher.token.not.scan.erc20"
+            value: 'true'
+          - name: "watcher.monitor.select.transaction.log"
             value: 'true'
           - name: "watcher.chain.scanStep"
             value: '1'
