--- a/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/production/node/deployment.yaml
@@ -33,7 +33,7 @@ spec:
             cpu: 0.1
             memory: 0.5Gi
           limits:
-            cpu: 0.5
+            cpu: 1
             memory: 2Gi
         volumeMounts:
         - name: host-time
@@ -160,7 +160,7 @@ spec:
           - name: "watcher.scan.switch"
             value: 'false'
           - name: "watcher.process.concurrent.switch"
-            value: 'false'
+            value: 'true'
           - name: "watcher.insert.transaction.log"
             value: 'true'
           - name: "watcher.select.transaction.log"
