--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -33,7 +33,7 @@ spec:
             cpu: 0.1
             memory: 0.5Gi
           limits:
-            cpu: 0.5
+            cpu: 1
             memory: 4Gi
         volumeMounts:
         - name: host-time
@@ -137,7 +137,7 @@ spec:
           - name: "watcher.scan.switch"
             value: "false"
           - name: "watcher.process.concurrent.switch"
-            value: "false"
+            value: "true"
           - name: "watcher.process.only.evmplugin"
             value: "false"
           - name: "watcher.insert.transaction.log"
