--- a/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
@@ -33,7 +33,7 @@ spec:
             cpu: 0.1
             memory: 2Gi
           limits:
-            cpu: 0.5
+            cpu: 1
             memory: 8Gi
         volumeMounts:
         - name: host-time
@@ -136,7 +136,7 @@ spec:
           - name: "watcher.scan.switch"
             value: "false"
           - name: "watcher.process.concurrent.switch"
-            value: "false"
+            value: "true"
           - name: "watcher.insert.transaction.log"
             value: "false"
           - name: "watcher.select.transaction.log"
