--- a/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-dtx/deployment.yaml
@@ -137,7 +137,7 @@ spec:
           - name: "watcher.scan.switch"
             value: "false"
           - name: "watcher.process.concurrent.switch"
-            value: "true"
+            value: "false"
           - name: "watcher.process.only.evmplugin"
             value: "false"
           - name: "watcher.insert.transaction.log"
