--- a/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
+++ b/watcher/watcher-bootstrap/deploy/sandbox/node-polygon/deployment.yaml
@@ -136,7 +136,7 @@ spec:
           - name: "watcher.scan.switch"
             value: "false"
           - name: "watcher.process.concurrent.switch"
-            value: "true"
+            value: "false"
           - name: "watcher.insert.transaction.log"
             value: "false"
           - name: "watcher.select.transaction.log"
