--- a/watcher/watcher-plugin/watcher-plugin-nft-auction/src/main/resources/application-local.properties
+++ b/watcher/watcher-plugin/watcher-plugin-nft-auction/src/main/resources/application-local.properties
@@ -4,6 +4,6 @@ spring.datasource.password=ZxcvAsdf
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
