--- a/watcher/watcher-plugin/watcher-plugin-nft-auction/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-nft-auction/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#pring.jpa.hibernate.ddl-auto=update
 
 
 
