--- a/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application-prd.properties
+++ b/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application-prd.properties
@@ -6,5 +6,5 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
