--- a/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application-test.properties
@@ -6,5 +6,5 @@
 
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
