--- a/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-token/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
