--- a/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application-test.properties
+++ b/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application-test.properties
@@ -3,7 +3,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.wallet.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/wallet?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.wallet.username=root
