--- a/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-transaction-history/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 spring.datasource.url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/bridge?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
